feat: Update project dependencies and configuration
This commit updates various dependencies in the `package.json` file to their latest stable versions. It also adjusts the `vite.config.ts` and `tsconfig.json` files to align with the new dependency versions and modern TypeScript practices. The project name in `package.json` has also been updated from "mcm+" to "mcm-plus" for better consistency.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MCM+ | Manager Career Management</title>
+    <!-- Tailwind CDN is kept for simplicity to avoid extra CSS config files, 
+         but allows the app to be styled immediately without a build step for CSS. 
+         In a full professional setup, we would move this to package.json/postcss. -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -39,12 +42,16 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-    "@heroicons/react/": "https://aistudiocdn.com/@heroicons/react@^2.2.0/"
+    "@heroicons/react/": "https://aistudiocdn.com/@heroicons/react@^2.2.0/",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
   <body class="bg-ghost text-obsidian dark:bg-obsidian dark:text-ghost transition-colors duration-300">
     <div id="root"></div>
+    <!-- This script tag is crucial for Vite to load your React app -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
