feat: Add loan status to players and UI
Introduces a new `isOnLoan` boolean field to the `Player` type and updates translations to include loan-related text. The HomeView now excludes loaned players when calculating squad statistics. The SquadView visually indicates players who are on loan.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           extend: {
             colors: {
               ghost: '#f8f8ff',
-              obsidian: '#0b0b0b',
+              // Changed from #0b0b0b to #18181b (Zinc 900) for better contrast
+              obsidian: '#18181b', 
               mint: {
                 DEFAULT: '#98ff98',
                 hover: '#7acc7a', 
