--- a/index.html
+++ b/index.html
@@ -24,16 +24,21 @@
               }
             },
             fontFamily: {
-              sans: ['Inter', 'sans-serif'],
+              // iOS System Font Stack for the main UI
+              sans: ['-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', 'sans-serif'],
+              // Custom Font for Logo
+              logo: ['"Archivo Black"', 'sans-serif'],
             }
           }
         }
       }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Import Archivo Black for Logo -->
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Inter', sans-serif;
+        /* Ensure the system font is applied */
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       }
     </style>
   <script type="importmap">
