feat: Improve dark mode contrast and update home screen UI
Adjusted the 'obsidian' color in Tailwind CSS to #27272a (Zinc 800) for improved readability in dark mode.
Updated the MCM+ logo representation on the home screen from a briefcase icon to a stylized '+' symbol with enhanced styling for a more prominent visual.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           extend: {
             colors: {
               ghost: '#f8f8ff',
-              // Changed from #0b0b0b to #18181b (Zinc 900) for better contrast
-              obsidian: '#18181b', 
+              // Changed from #18181b to #27272a (Zinc 800) for better contrast in dark mode
+              obsidian: '#27272a', 
               mint: {
                 DEFAULT: '#98ff98',
                 hover: '#7acc7a', 
